--- a/PID_ITS2/configs/config_plots.yml
+++ b/PID_ITS2/configs/config_plots.yml
@@ -1,13 +1,13 @@
 inputs:
     dirname: null # leave null if not common for all input files
-    filenames: [/home/galucia/PID_ITS/ITS_Cluster_Studies/PID ITS - Giorgio Alberto/code/output.root,
-                /home/galucia/PID_ITS/ITS_Cluster_Studies/PID ITS - Giorgio Alberto/code/output.root,
-
+    filenames: [/Users/giogi/Desktop/ALICE/ITS_Cluster_Studies/PID_ITS2/output/hybrid/data_visual.root,
+                /Users/giogi/Desktop/ALICE/ITS_Cluster_Studies/PID_ITS2/output/hybrid/data_visual.root,
+                /Users/giogi/Desktop/ALICE/ITS_Cluster_Studies/PID_ITS2/output/hybrid/data_visual.root
                 ]
-    objectnames: ['Delta_Pi_NOOPT_hybrid', 'Delta_Pi_AUGM_hybrid', 'clsize_K_TPC_sliced', '0'] # can be either histograms of graphs or a mix of them; they will be drawn in the current order
+    objectnames: ['p_P', 'p_K', 'p_Pi', '0'] # can be either histograms of graphs or a mix of them; they will be drawn in the current order
 
 output: 
-    filename: /home/galucia/PID_ITS/Tesi/Delta_Pi_hybrid # with path and w/o extension
+    filename: /Users/giogi/Desktop/ALICE/ITS_Cluster_Studies/PID_ITS2/report/img/pHybrid # with path and w/o extension
     objectnames: ['p', 'K', 'pi', 'e'] # new names for the created objects. Will be AUTOMATICALLY applied if the lenght of the list equals the lenght of the one in the input section
     extensions: [png] # possibilities: pdf, eps, png, root
 
@@ -15,14 +15,14 @@ options:
     ROOTobject: [TH1, TH1, TH1] # TH1, TH2 or TGraph: no need to specify TH1F, TH1D or TGraphErrors, TGraphAsymmErrors
     scale: [1, 1, 1, 1]
     rebin: [1, 1, 1, 1]
-    normalize: [true, true, true, true] # divide histogram by its area
+    normalize: [false, false, false, true] # divide histogram by its area
     colors: [kRed+1, kAzure+4, kGreen+3, kOrange+2]
     markers: [kFullCircle, kFullCircle, kFullCircle, kFullCircle]
     markersize: 1.5
     linewidth: 2
     fillstyle: [3004,3004,3004,0]
     fillalpha: [1,1,1,1]
-    drawopt: ['hist', 'hist', 'hist e0']
+    drawopt: ['hist', 'hist', 'hist']
     palette: ['kBlue', 'kBlue', 'kBlue', 'kBlue']
     
     ratio: 
@@ -48,11 +48,11 @@ options:
 
     legend:
         avoid: false #set true to avoid the legend in the final plot
-        xlimits: [0.57, 0.9]
+        xlimits: [0.67, 0.9]
         ylimits: [0.58, 0.83]
-        header: '#splitline{#splitline{pions}{#splitline{hybrid train; ITS-TPC appl.}{0.35 < #it{p} < 0.45 GeV/#it{c}}}}{}'
-        titles: ['without weights', 'with weights']
-        options: [l, l, lp, l]
+        header: '#splitline{#it{p} (GeV/#it{c})}{}'
+        titles: ['p', 'K', '#pi']
+        options: [l, l, l, l]
         textsize: 0.042
         ncolumns: 1
 
@@ -66,11 +66,11 @@ options:
     canvas:
         width: 1200
         heigth: 1000
-        xaxistitle: '#Delta'
-        yaxistitle: 'Norm. counts'
+        xaxistitle: 'p'
+        yaxistitle: 'Counts'
         yaxistitleratio: ''
-        xlimits: [-0.1, 0.8]
-        ylimits: [0.000, 0.05]
+        xlimits: [0., 1.5]
+        ylimits: [1, 3000.]
         ylimitsratio: [0.00001, 1]
         ylimitserr: [0., 0.35]
         logx: false
