--- a/PID_ITS2/configs/config_adj2.yml
+++ b/PID_ITS2/configs/config_adj2.yml
@@ -1,36 +1,54 @@
 ### INPUT INFO
-finPaths:     [/Users/giogi/Desktop/ALICE/ITS_Cluster_Studies/PID_ITS2/output/hybrid/application.root,
+finPaths:     [/Users/giogi/Desktop/ALICE/ITS_Cluster_Studies/PID_ITS2/output/TPC/application_no_options.root,
+               /Users/giogi/Desktop/ALICE/ITS_Cluster_Studies/PID_ITS2/output/TPC/application_beta_pflat.root,
+               #/Users/giogi/Desktop/ALICE/ITS_Cluster_Studies/PID_ITS2/output/TPC/delta.root,
 
 
               ]
 objNames:     ['beta_pred_vs_p',
+               'beta_pred_vs_p',
+               #'Delta_vs_p_P',
 
               ]
 
 
 ### OUTPUT INFO
-foutPaths:    [/Users/giogi/Desktop/ALICE/ITS_Cluster_Studies/PID_ITS2/report/img/beta_vs_pHybrid_betaflat,
+foutPaths:    [/Users/giogi/Desktop/ALICE/ITS_Cluster_Studies/PID_ITS2/report/img3/beta_vs_pTPC,  
+               /Users/giogi/Desktop/ALICE/ITS_Cluster_Studies/PID_ITS2/report/img3/beta_vs_pTPC_betapflat,  
+               #/Users/giogi/Desktop/ALICE/ITS_Cluster_Studies/PID_ITS2/report/img3/delta_vs_p_PTPC_betapflat,
 
               ]
 outFormats:   [[png],
+               [png],
+               #[png],
 
               ]
 
 
 ### CONFIG  
-axisTitles:   [';#it{p} (GeV/#it{c}); #beta',
+axisTitles:   [';#it{p} (GeV/#it{c}); #beta (ML)',
+               ';#it{p} (GeV/#it{c}); #beta (ML)',
+               #';#it{p} (GeV/#it{c}); #Delta',
 
               ]
-axisLimits:   [[0, 0, 1.5, 1],
+axisLimits:   [[0, 0, 1.5, 1.1],
+               [0, 0, 1.5, 1.1],
+               #[0, -1.5, 1.5, .5],
 
               ] # [x, ylabel1, ylabel2, ylabel3]
 latexLabels:  [[0.6, 0.43, 0.35, 0.27],
+               [0.45, 0.43, 0.35, 0.27],
+               #[0.47, 0.37, 0.29, 0.21],
 
               ]
-sampleLabels: ['ITS & V0 data - weight in #it{p} and #beta',
+sampleLabels: ['apass3 data',
+               'apass3 data - weights in #beta and #it{p}',
+               #'apass3 data - weights in #beta and #it{p}',
 
               ]
 runLabels:    [false,
+               false,
+               #false,
 
               ] # true if MC
 
@@ -38,8 +56,12 @@ runLabels:    [false,
 ### CANVAS DIM
 canvas:
     width:    [1800,
+               1800,
+               #1800,
 
               ]
     height:   [1000,
+               1000,
+               #1000,
 
               ]
