--- a/PID_ITS2/configs/cfgPID_visual.yml
+++ b/PID_ITS2/configs/cfgPID_visual.yml
@@ -31,7 +31,7 @@ TH1:
                         xmin:   0,
                         xmax:   25},
               meanClSize: {title:  "<Cl. Size>; <cl. size>; counts",
-                        nBins:  125,
+                        nBins:  100,
                         xmin:   0,
                         xmax:   25},
               clSizeCosL: {title:  "<Cl. Size> <cos#lambda>; <cl. size> <cos#lambda>; counts",
@@ -59,9 +59,9 @@ TH1:
                         xmin:   -4,
                         xmax:   4},
               dEdx:    {title:  "dE/dx; dE/dx (); counts",
-                        nBins:  100,
+                        nBins:  600,
                         xmin:   0,
-                        xmax:   100},
+                        xmax:   600},
               nSigmaAbsE: {title:  "|n#sigma_{e}| (); |n#sigma_{e}| (); counts",
                         nBins:  100,
                         xmin:   0,
@@ -87,13 +87,22 @@ TH1:
 TH2:      
   settings: { dEdx_vs_p:  {title:  "dE/dx vs p; p (GeV/c); dE/dx (); counts",
                         x:      "p",
-                        nBinsX:  1500,
+                        nBinsX: 1500,
                         xmin:   0,
                         xmax:   1.5,
                         y:      "dEdx",
-                        nBinsY:  100,
+                        nBinsY: 600,
                         ymin:   0,
-                        ymax:   10000},
+                        ymax:   600},
+              clSizeCosL_vs_p: {title:  "<Cl. Size> <cos#lambda> vs p; p (GeV/c); <cl. size> <cos#lambda> (); counts",
+                        x:      "p",
+                        nBinsX:  1500,
+                        xmin:   0,
+                        xmax:   1.5,
+                        y:      "clSizeCosL",
+                        nBinsY: 250,
+                        ymin:   0,
+                        ymax:   25},
               beta_vs_p: {title:  "#beta vs p; p (GeV/c); #beta (); counts",
                         x:     "p",
                         nBinsX:  1500,
